--- a/计算机网络.md
+++ b/计算机网络.md
@@ -1,4 +1,4 @@
-### 互联网的组成
+## 互联网的组成
 
 + 边缘部分
 
@@ -54,4 +54,40 @@
 + IPV6将首部长度变成固定的40字节。称为基本首部。
 + 取消了首部的检验字段。
 + IPV6数据包的目的地址可以说单播，多播和任播三种。
++ ipv6和ipv4的比较
+  + 取消了首部长度字段
+  + 取消了服务类型字段
+  + 取消了总长度字段
+  + 取消了标识，标志和片偏移字段
+  + 把TTL字段改成条数限制字段
+  + 取消了协议字段
+  + 取消了检验和字段
+  + 取消了选项字段
++ IPV6向IPV4的过渡
+  + 使用双协议栈，双协议栈是指在协议传输到某一个字段的时候进行协议的转换，但是会造成部分数据的缺失。
+  + 使用隧道协议，该协议是在原数据包的基础上套另一个协议，然后通过该种协议进行数据的传输。
 
+
+
+## 运输层
+
+#### 概述
+
++ 运输层是端到端的通信，这里的端是程序在运行的时候暴露的端口。
++ 传输层提供了TCP和UDP两种传输协议
+  + TCP是面向连接的，可靠的传输协议，将报文分为多个字段进行传输。有流量控制，无丢失，无重复，按序交付。
+  + UDP协议是无连接的，不可靠的协议。无流量控制，有丢失，有重复，可能存在失序的情况。
+
+#### 运输层的端口
+
++ 端口号是相对本地而言的，端口是为了标记计算机进程，端口只是对本地有意义。
++ 默认的端口是80端口
++ 发送方让应用层的各种引用进程都能将其数据通过端口向下交付给运输层。
++ 接收方那该让运输层知道应当将其报文段中的数据向上通过端口交付给引用层相应的进程。
++ 端口的范围一般为0-65535,其中熟知的端口号一般为0-1023,登记的端口号为:1024-49151,客户端口号或者短暂端口号为:49151-65535
+
+#### UDP(用户数据报)协议
+
++ 由数据字段和首部字段组成
+  + 首部字段为远端口，目的端口，长度和检验和
+  + 
