--- a/计算机网络.md
+++ b/计算机网络.md
@@ -67,7 +67,57 @@
   + 使用双协议栈，双协议栈是指在协议传输到某一个字段的时候进行协议的转换，但是会造成部分数据的缺失。
   + 使用隧道协议，该协议是在原数据包的基础上套另一个协议，然后通过该种协议进行数据的传输。
 
+#### 网际协议IP
 
++ 第4个版本IPv4和第6个版本IPv6
++ 与IP协议配套的协议：
+  + 地址解析协议(ARP);
+  + 网际控制报文协议(ICMP);
+  + 网际组管理协议(IGMP)
++ IP地址及其表示方法
+  + IP地址一般由两个字段组成：IP地址=网络号+主机号
+    + 网络号，表示的是主机或路由器所连接的网络。网络号是唯一的。
+    + 主机号，主机号标志着主机或者路由器。
+  + IP地址分为A，B，C，D，E五类地址。其中A，B，C是单播地址。
+  + 总长一共4个字节，其中A，B，C的网络号分别占1，2，3个字节，主机号分别占3,2,1个字节。
+  + A类地址的网络号只有一个字节，其中的7位可以使用，第一位默认为0.网络号全为0的地址是一个保留地址，表示的是本网络，全1的是作为本地软件测试的回环地址，用于本主机的进程之间的通信。整个A类地址的空间占IP地址的50%。
+  + B类地址的网络号占两个字节，其中前两位已经固定下来，为1,0。整个B类地址的空间占IP地址的25%。
+  + C类地址的网络号占三个字节，其中前三位确定下来了，分别为1 1 0.还有21位可以进行分配。整个C类地址占IP地址空间为12.5%
+  + IP地址是指网络应用层以上使用的地址，而物理地址是在运输层和数据链路层使用的地址。
++ 地址解析协议ARP
+  + 作用是从网络层使用的IP协议，解析出在数据链路层使用的硬件地址。通过在主机ARP高速缓存中存放一个从IP协议到硬件地址的映射表，并且这个映射表还经常动态更新。
+  + ARP把已经得到的地址映射放到高速缓存里面，这样就是得主机下次再和具有相同的目的地址的主机通行的时候，可以直接从高速缓存里面中找到所需要的硬件地址而不必再以广播的方式发送ARP请求分组。
+  + 注意要在同一个局域网下面。
++ IP数据包的格式
+  + 首部固定部分中的各字段。
+    + 版本，首部长度，区分服务，总长度，标识，标志，片偏移，生存时间，协议，首部检验和，源地址，目的地址。
+
+
+
+#### 划分子网和构造超网
+
++ 划分子网
+  + IP地址的空间利用率有时很低，而且二级地址不太灵活，所以，可以对二级IP进行划分，变成三级IP。这种方法叫做划分子网。
+  + 划分子网使得二级IP变成三级IP地址。IP地址=网络号+子网号+主机号
+  + 路由器收到iP数据包之后，根据目的网络号和子网号找到目的子网，把IP数据报交付给目的主机。
++ 子网掩码
+  + 子网掩码是为了在IP数据包的首部看书援助基或者目的主机所连接的网络是否进行了子网的划分。
+  + 划分子网增加了灵活性，但是却减少了能够连接在网络上的主机总数。
++ 使用子网时的分组转发，子网划分之后，路由表里面必须要包含目的网络地址，子网掩码和下一跳地址。
++ 无分类编址CIDR(构造超网)
+  + 网络前缀
+    + CIDR消除了传统的A类，B类和C类地址以及划分子网的概念，更加有效地分配了IPv4的地址。回到了二级地址，也就是IP地址=网络前缀+主机号。
+    + 在IP地址后面加上/，表示的是网络前缀所占的位数。
+    + CIDR把网络前缀相同的连续IP组成一个CIDR地址块。
+    + 斜线标记法中，后面的数字表示的是地址掩码中1的个数。
+  + 最长前缀匹配
+
+#### 网际控制报文协议ICMP
+
++ 有效地转发IP数据报和提高交付成功的机会。
++ ICMP差错报文和ICMP询问报文
+  + 差错报文：重点不可达，时间超时，参数问题，改变路由（重定向)，就这四种报文。
+  + 询问报文：回送请求和回答，时间戳请求和回答。
 
 ## 运输层
 
