--- a/计算机网络.md
+++ b/计算机网络.md
@@ -139,5 +139,38 @@
 #### UDP(用户数据报)协议
 
 + 由数据字段和首部字段组成
-  + 首部字段为远端口，目的端口，长度和检验和
-  + 
+  + 首部字段为远端口，目的端口，长度和检验和。
+
+#### 传输控制协议TCP
+
++ 特点
+  + TCP的主要特点是面向连接的运输层协议。
+  + 每个TCP连接只能有两个端点，是点对点连接。
+  + TCP提供可靠交付，无差错，不丢失，不重复。
+  + TCP提供全双工通信，通信双方可以同时发送数据和接收数据。
+  + 面向字节流，流是进程流向进程的字节序列。
+
+#### TCP报文首部格式
+
++ TCP分为首部和数据两部分。TCP的功能体现在它的首部字段。
+  + 源端口和目的端口，各占两个字节。
+  + 序号，占四个字节。TCP中的每个字节都是按照字节进行编号的。最多是4G
+  + 确认号，占用四个字节。期望收到对方下一个报文段的第一个数据字节的序号
+  + 数据偏移，占四位。
+  + 保留，为以后保留空间。
+  + 紧急URG，发送应用告诉发送方的TCP有紧急的数据要传输。然后将这个数据放到数据的最前面，优先进行传输。
+  + 确认ACK，ACK=1表示字段有效，否则无效。
+  + 推送PUSH，当两个进程进行交互通信的时候，一端的应用进程希望在键入一个命令后立即能够收到对方的相应。也就是立马向上交付，交给上层应用。
+  + 复位RST，RST=1,表示TCP连接出现严重的错误，需要进行复位。
+  + 同步SYN，在连接建立的时候同步序号。
+  + 终止FIN，释放一个连接。
+  + 窗口，占两个字节。窗口值作为接收方让发送方设置其发送窗口的依据。可以用于流量的控制。
+  + 检验和，占2字节，检验和字段检验的范围包括首部和数据这两部分。
+  + 紧急指针，占两字节，当URG=1的时候，我们需要设置这个字段，指出了紧急数据的末尾在报文段的位置。
+  + 选项
+    + 最大报文长度MSS，主要是选取合适的传输数据的长度，过长或者过短都可能会造成多余的开销。TCP和IP的首部都是20个字节，如果不设置，那么就默认为556个字节。数据在TCP进行包装之后，传输到IP层的话还要加上IP数据报的首部20个字节。过短的话利用率较低，过长的话切割报文的开销增加。
+    + 选择确认，明确告诉一端哪些数据未收到，可以减少接收到的数据的重复传输。
+
++ TCP的超时重传的选择
+  + 两个时间之差就是报文段的往返时间RTT。TCP保留了RTT的一个加权平均往返时间RTT。
+  + 超时重传时间RTO，一般要大于RTT。
