--- a/计算机网络.md
+++ b/计算机网络.md
@@ -139,7 +139,8 @@
 #### UDP(用户数据报)协议
 
 + 由数据字段和首部字段组成
-  + 首部字段为远端口，目的端口，长度和检验和。
+  + 首部字段为源端口，目的端口，长度和检验和。只占8个字节，每个数字都是由16进制进行表示的;
+  + 
 
 #### 传输控制协议TCP
 
