--- a/计算机网络.md
+++ b/计算机网络.md
@@ -175,3 +175,19 @@
 + TCP的超时重传的选择
   + 两个时间之差就是报文段的往返时间RTT。TCP保留了RTT的一个加权平均往返时间RTT。
   + 超时重传时间RTO，一般要大于RTT。
+
+### 应用层
+
++ DNS(域名系统)
+  + dns通过解析域名得到相关的ip地址，dns使得大多数的域名可以在本地得到解析。dns存储了主机名和ip地址的对应。通过dns可以查询到某一个域名对应的ip，某一个ip对应的主机名。
+
++ 代理服务器
+  + 代理服务器就相当于一个中转站，代理服务器将一些请求和相关的相应存储到本地磁盘里面，当接受到新的请求的时候，代理服务器先在本地进行查找，如果本地已经有了相关的响应，那么就直接返回，而不用通过url的地址去通过互联网访问相关的资源。从而提高通信的效率和节约流量。
++ HTTP的报文结构
+  + 分为请求报文和响应报文
+  + 开始行，首部行，实体主体和状态码
++ cookie
+  + cookie是由服务器的主机名和识别码组成。
+  + 服务其上面可以通过cookie存储用户的信息，但是这个信息不是用户的真实信息，存储的是用户的行为，存储了用户什么时候访问了哪个url，可以用于分析用户的行为。
+  + 当用户访问浏览器的时候，服务器就会为该用户产生一个识别码，在之后的访问的，浏览器就会在cookie文件里面找到该用户的cookie，并且放到HTTP请求报文里面。网站服务器如果获取到用户的cookie文件，可以分析用户的行为，然后给用户推荐符合用户的需求的相关服务。
+
