--- a/计算机网络.md
+++ b/计算机网络.md
@@ -24,7 +24,7 @@
 
   + 报文交换
 
-    报文交换类似于分组交换，但是不如分组交换那样速度快。将报文先传送到相邻的结点，然后进行存储查找转发表，转发到下一个结点。
+    报文交换类似于分组交换，但是不如分组交换那样速度快。将报文先传送到相邻的结点，然后进行存储查找转发表，转发到下一个结点
 
 
 
