--- a/计算机组成原理.md
+++ b/计算机组成原理.md
@@ -1,6 +1,33 @@
-### 计算机系统的层次结构
-
++ 现代计算机的五大部分：运算器，控制器，主存储器，输入设备和输出设备
 + 高级语言->汇编语言->机器语言
 + 编译程序：将高级语言编写的源程序全部语句执行一次全部翻译成机器语言程序，而后再执行机器语言程序（只需要翻译一次)
 + 解释程序：将源程序的一条语句翻译成对应于机器语言的语句，并立即执行。紧接着再翻译一句（每次执行都要进行翻译）
-+ 
+
++ 存储器
+  + MAR，位数反映存储单元的个数
+  + MDR，位数等于存储字长，也就是每个存储单元的大小
++ 在描述文件的存储大小的时候，1K=2^10,1M=2^20,1G=2^30,1T=2^40，在描述频率，速率的时候，1k=10^3,1M=10^6,1G=10^9,1T=10^12
++ CPU的性能指标
+  + cpu主频，cpu内数字脉冲信号的振荡频率
+  + cpi，执行一条指令所需要的时钟周期数
+  + IPS，每秒执行的指令数
+  + FLOPS，每秒中执行多少次浮点运算
++ 数据通路带宽：数据总线一次所能并行传输信息的位数。
++ 吞吐量，值系统在单位时间内处理请求的数量
++ 响应时间：用户向计算机发送一个请求到获得结果的时间
++ BCD码
+  + 8421码，只能表示0-9之间的数字，有6为冗余位，如果超过1111,应该加上6进行修正。
+  + 余3码，8421码+（0011）进行一个修正。
+  + 2421码，改变权值的定义
+
++ 奇偶校验码。
+
+  + 这种编码分为奇校验码和偶校验码，顾名思义，就是通过在最高为添加0或者1来保证我们的数据一定有奇数个1或者偶数个1,在数据传输的过程中，我们发现，如果出现某一个为改变了，那么它就不符合最开始规定的奇数个1或者偶数个1,这样的话，我们就可以要求重新传输数据。但是，这样的话，如果自爱数据传输的过程中，我们发现，如果有偶数个1改变了，那么这样的话我们是发现不了错误的。所以这也是奇偶校验码的局限性。
+
+  + 冗余码，普通的二进制的码距为1,这样的编码是没有检查错误的功能的。但是冗余码的码距为1,这样如果其中有一位二进制改变了，那么就一定可以发现错误。
+
++ 循环冗余码
+
+  + 基本思想：双方先规定好除数和被除数，然后，在接受方收到数据的时候，可以根据这两个进行检验查错。
+  + 主要构成：信息位和校验位。
+  + 有检错能力，在特定情况下面也有纠错能力。
