--- a/计算机网络.md
+++ b/计算机网络.md
@@ -1,34 +1,74 @@
 ## 互联网的组成
 
-+ 边缘部分
+### 边缘部分
 
-  + 客户-服务器方式（C/S方式)
++ 客户-服务器方式（C/S方式)
 
-    主要是由客户端和服务端组成，他们之间的通信指的是两个进程之间的通信。他们的关系是服务被服务的关系，客户端主动发送请求，服务端被动接受请求，客户端与服务端建立通信之后，他们之间的通信是相互的，客户端与服务端之间可以互相发送或者接受请求。
+  主要是由客户端和服务端组成，他们之间的通信指的是两个进程之间的通信。他们的关系是服务被服务的关系，客户端主动发送请求，服务端被动接受请求，客户端与服务端建立通信之后，他们之间的通信是相互的，客户端与服务端之间可以互相发送或者接受请求。
 
-  + 对等方式(P2P方式)
++ 对等方式(P2P方式)
 
-    对等方式指的是两台计算机系统进行平等的交流，他们之间没有客户端与服务端的区别，可以互相读取对方硬盘上的数据，其本质还是一个客户-服务器方式的通信。
+  对等方式指的是两台计算机系统进行平等的交流，他们之间没有客户端与服务端的区别，可以互相读取对方硬盘上的数据，其本质还是一个客户-服务器方式的通信。
 
-+ 核心部分
+### 核心部分
 
-  核心部分由大量的主机实现连通性，起特殊作用的是路由器，路由器是实现分组构建的关键部件。其任务是接收到转发的分组。
+核心部分由大量的主机实现连通性，起特殊作用的是路由器，路由器是实现分组构建的关键部件。其任务是接收到转发的分组。
 
-  + 电路交换
++ 电路交换
 
-    电路交换的特点是占用通信资源->一直占用通信资源->归还通信资源，这种交换方式效率很低，实现任何两台计算机之间的通信成本太大。
+  电路交换的特点是占用通信资源->一直占用通信资源->归还通信资源，这种交换方式效率很低，实现任何两台计算机之间的通信成本太大。
 
-  + 分组交换
++ 分组交换
 
-    分组交换是采用存储转发的一种放方式，我们将要传输的整体数据叫做报文，然后，我们将报文分为许多个部分，叫做分组，在每个分组加上一些控制信息(首部）进行数据的传输，最终将接收到的分组拼接而原始数据。互联网的核心是由许多路由器组成的，主机是用来处理数据，而路由器是传输数据，进行分组的转发。即进行分组交换的。路由器的使用实现了互联网的高速地通信。如果将单个互联网简化为一个链路，那么路由器就是这个链路的结点。这种传输方式如果在数据中出现传输障碍的话，更具协议会选择最适合的路径，保证了传输的高效。分组在哪个部分进行传输，那么这个就占用那个信道的资源。但是由于分组需要进行排队等待传输，所以会造成一定的时延。
+  分组交换是采用存储转发的一种放方式，我们将要传输的整体数据叫做报文，然后，我们将报文分为许多个部分，叫做分组，在每个分组加上一些控制信息(首部）进行数据的传输，最终将接收到的分组拼接而原始数据。互联网的核心是由许多路由器组成的，主机是用来处理数据，而路由器是传输数据，进行分组的转发。即进行分组交换的。路由器的使用实现了互联网的高速地通信。如果将单个互联网简化为一个链路，那么路由器就是这个链路的结点。这种传输方式如果在数据中出现传输障碍的话，更具协议会选择最适合的路径，保证了传输的高效。分组在哪个部分进行传输，那么这个就占用那个信道的资源。但是由于分组需要进行排队等待传输，所以会造成一定的时延。
 
-  + 报文交换
++ 报文交换
 
-    报文交换类似于分组交换，但是不如分组交换那样速度快。将报文先传送到相邻的结点，然后进行存储查找转发表，转发到下一个结点
+  报文交换类似于分组交换，但是不如分组交换那样速度快。将报文先传送到相邻的结点，然后进行存储查找转发表，转发到下一个结点
 
+### 计算机网络的性能指标
 
++ 往返时延RTT：从发送方发送数据开始，到发送方收到接收方的确认总共经历的时延，RTT包括往返传播时延和未端处理时延。
++ 利用率，指信道利用率
++ 速率
++ 带宽
++ 吞吐量
++ 时延
++ 时延带宽积
 
+### 计算机网络的组成
 
++ 硬件，软件和协议
++ 工作方式
+  + 边缘部分 用户直接使用
+  + 核心部分，为边缘部分服务
++ 功能组成
+  + 通信子网 实现数据通信
+  + 资源子网 实现资源共享/数据处理
+
++ 带宽
+  + 原本指某一个信号具有的频带宽度，即最高频率与最低频率之差
+
+### 分层结构
+
+#### 7层OSI参考模型
+
++ 物理层，数据链路层，网络层，传输层，会话层，表示层，应用层。
++ 应用层：与用户交互产生网络流量。
++ 表示层：在两个通信系统中交换信息的表示方式（数据格式交换，数据加密和解密，数据的压缩和解压缩）。
++ 会话层：向表示层提供建立连接并在连接上有序地传输数据，建立，管理，终止会话，在通信失效的时候从检验点继续回复通信数据的同步，适用于传输大文件。
++ 传输层，负责主机中两个进程的通信，是端到端通信，传输单位是报文段或者用户数据报。
++ 网络层：可靠传输，不可靠传输，差错控制和流量控制和复用分用。路由选择，流量控制，拥塞控制。
++ 数据链路层：把网络层上面传下来的数据报封装成帧。数据链路层的传输单位是帧。
++ 物理层：在物理媒体上面实现比特流的透明传输。
+
+#### TCP/IP参考模型
+
++ 应用层，传输层，网际层，网络接口层。
+
+#### 或5层参考模型
+
++ 应用层，传输层，网络层，数据链路层，物理层。
 
 ## 网络层
 
