--- a/计算机组成原理.md
+++ b/计算机组成原理.md
@@ -48,6 +48,10 @@
 
 ### 指令
 
++ 主要由操作码和地址码组成，定长指令结构和扩展指令结构。
+
++ 我们用一个PC用来指示指令所在的地址，所以只需要给出操作数就行了。
+
 + 汇编级机器指令集
   + 分类
     + 数据传送类指令
@@ -87,4 +91,177 @@
 + ROM用于存储操作系统的内核。
 + ROM为非易是失存储器，ARM未易失存储器。
 + 存储器的层次分为主存，辅存和高速缓存。
+
+#### 半导体存储器
+
++ 随机存储器RAM主要分为两类，动态存储器和静态存储器
+
+| 静态存储器               | 动态存储器         |
+| ------------------------ | ------------------ |
+| 触发器                   | 电容               |
+| 可以存放两种状态         | 不可以存放两种状态 |
+|                          | 刷新以行为单位     |
+| 保存时间比较长           | 保存时间不是很长   |
+| 一般用于制作成高速缓冲器 | 一般用作主存       |
+
++ 动态存储器DRAM
+  + 集中式刷新
+  + 分散式刷新
+  + 异步刷新
++ ORM只读存储器用于在每次开机之后记录一些关键的信息。所以一般被用作存放一些操作系统的内核。
+
+#### 交叉存储技术
+
++ 分为线性方式和交叉方式
++ 交叉方式的效率更高，可以缩短存储周期。一个周期的总时间为T+(n-1)t
++ 线性方式的效率类似于流水线的方式，一个周期的总时间为nT
+
+#### 高速缓存存储器Cache
+
++ 将一部分的数据从主存放入高速存储器里面，后面CPU与主存的数据的交换其实就是与cache的交换了，从而提高了数据的访问时间。
++ Cache有一个命中率的概念，我们的CPU需要访问数据的时候，需要先从Cache进行访问，这个Cache有一个命中率，如果命中，那么就直接取用数据，否则那么就直接从主存里面取用数据，从主存里面取用数据是100%命中的。
+
+#### 主存与Cache的地址映射(怎么存)
+
++ 全相连映射
+  + 指的是主存中的任意一块都可以映射到Cache中的任意一块的方式。
+  + 优点是Cache的空间利用率高，但是缺点是相连存储器庞大，比较电路复杂，之是和小容量的Cache使用。
++ 直接相连映射
+  + 是指主存的某块j只能映射到满足一下特定关系的Cache块i中。
+  + 主存的块数是Cache的块数的整数倍。
+  + 当我们主存中的块调入Cache的时候，会同时将主存地址的T标志位存入Cache快的标志字段，当CPU送来一个访问请求的时候，主存会根据C字段找到Cache的相应块，然后就将该块的字段的标志位与Cache位中的标志位进行比较，判断是否命中。
+  + 该设计的优点是电路实现简单，缺点是Cache块冲突率高，从而降低了Cache的利用了率。
++ 组相连映射
+  + 组相连映射结合了以上二者的优缺点。
+
+#### 替换算法（怎么更新）
+
++ 随机算法，随机替换Cache块，实现比较简单。
++ 先进先出算法，最早调入的行进行替换，实现比较容易，但可能会把下一个需要使用的块替换出去，执行效率比较低。
++ 近期最少使用算法，一句陈需访问的局部性原理选择近期内长久未访问过的存储行作为替换行，平均命中率要比FIFO更高。
++ 最不经常使用算法，将一段时间内被访问的次数最少的存储行替换出去。
+
+#### Cache的写策略（什么时候写回主存）
+
++ 写回法。当CPU进行写数据的时候，如果没有命中Cache的话，那么CPU就会直接修改主存里面的内容。如果命中了Cache的话，那么就会设置一个脏位，用来表示这个位置是否被修改过，大概你某块被替换出去的时候，就需要判断这个位置是否需要写回主存里面。
++ 全写法，就是在每次Cache命中的时候，直接写回主存里面，优点是保持了Cache与主存的高度统一性，但是缺点是使得CPU的写操作失去了缓存的功能。
+
+#### 虚拟存储器
+
++ 整个软硬件结合起来提供给用用户的存储空间，这个是一个逻辑模型。
+
++ 页式虚拟存储器
+  + 虚拟空间与主存空间都被划分为同样大小的页，主寸的页成为实页，虚存的页分为虚页。
++ 段式虚拟存储器
+  + 分为段号和段内地址，每一行记录了与某个段对应的段号，装入位，段起点和段长等信息。
++ 段页式虚拟存储器
+  + 段号+段内页号+页内地址。
+
+### CPU
+
++ 功能：指令控制，数据控制，时间控制，数据加工，中断处理。
++ cpu主要由运算器和控制器组成。
++ 指令周期和机器周期
+  + 指令周期由多个机器周期组成
+
+#### 运算器
+
++ 算术逻辑单元，主要进行算术逻辑运算
++ 通用寄存器，用来存储操作数和各种地址信息。
++ cpu内部单总线方式，将所有寄存器里面的输入端和输出端连接到一条公共的通路上面。
++ 暂存寄存器，用于暂时存储来自主存的数据，而不是放到通用寄存器里面。
++ 累加寄存器。
++ 程序状态字寄存器。
++ 移位器。
++ 计数器
+
+#### 控制器
+
++ 控制器的设计主要分为硬布线和微程序两种方案。
+
+  + 硬布线，将控制部件做成产生固定时序控制信号的逻辑电路。主要由门电路和触发器构成。
+  + 计算机所需要的所有指令均有这个组合逻辑网络产生。
+  + 缺点：硬布线是通过许多门电路产生微操作控制信号，这些门电路所需要的逻辑形态是不规整的，因此控制器的核心部分比较繁琐，零乱，设计效率低。改进的方法是引入CPU的构成级，使之规整化，就想编制程序那样去编制微操作的控制信号序列。
+  + 缺点：不易修改和扩展，硬布线控制器一旦设计出来，就不能够进行修改了，这也导致了微程序设计方法的出现。
+  + 微程序，将指令周期所需要的微操作控制信号，以代码的形式编写成微指令，存入一个ROM构成的控制存储器里面。将各机器指令分解为若干个微操作序列，若干条微指令组成的一段微程序，构成了一条机器指令。
+  + 微操作分为相容性微操作和互斥性微操作。
+  + 微程序控制器的组成：
+    + 控制存储器，存放实现全部指令系统的微程序。
+    + 微指令寄存器，用来存放由控制存储器读出的一条微指令信息。
+    + 微地址寄存器，存放要访问的微指令在控制存储器的地址。
+    + 微地址形成逻辑，直接给出下一条微指令的地址。
+  + 微指令周期等于读出微指令的时间加上执行这条微指令的时间。
+  + 比较：微程序控制器的控制功能是存放微程序的控制存储器和存放当前正在执行的指令的寄存器的直接控制下共同实现的。适合较为复杂的计算机;微程序的速度比硬布线控制的速度慢，因为执行每条微笑指令都要从控制存储器中读取，硬布线主要取决与电路延迟。
+
+  + 微指令编码
+    + 直接表示法
+    + 字段直接译码法
+    + 混合表示法
+    + 常数字段控制法
+
++ 控制器的设计主要有两种方案，硬布线和微程序。
++ 程序计数器，用于存储下一条指令在主存中的地址信息。
++ 指令寄存器。
++ 指令译码器。
++ 存储数据寄存器。
++ 存储地址寄存器。
+
+### 总线
+
++ 总线是一组信号线，用于将两个或者两个部件连接起来。
+
++ 共享性，总线是供所有的部件进行通信所共享的，任何两个部件之间的数据传输都是通过共享的公共总线进行的。
++ 独占性，一旦有一个不见占用总线与另一个部件进行通信，其他部件就不能再使用总线了。
++ 总线按照功能进行划分包括数据总线，地址总线和控制总线。
+  + 地址总线，用来传输CPU等主设备发往从设备的地址信号。
+  + 数据总线，传输的是各部件之间交换的数据的信息。
+  + 控制总线，传输的是一个部件对另一个部件的控制或者状态信号。
++ 总线按照部件进行划分包括系统总线，局部总线和外部总线。
+  + 系统总线，用于将CPU，存储器和部分输入输出接口及I/O通道连接起来的一组信号线。
+  + 局部总线，用于CPU与存储器和CPU与显示器之间的专用总线。
+  + 外部总线，主要是计算机与计算机和计算机与外部设备之间的通信总线。
++ 总线互连结构
+  + 单总线结构
+  + 局部总线结构
+  + 多总线结构
+
+### 输入/输出设备
+
++ CPU通过I/O接口和各种外围设备进行连接。
++ I/O接口的组成部分
+  + 数据寄存器
+  + 状态寄存器
+  + 控制寄存器
+  + 地址寄存器
++ I/O接口的功能
+  + 数据的寄存和缓冲
+  + 对设备的控制和监测
+  + 对设备的寻址
+  + 信号变换
+
+#### 外部存储的组织
+
++ 磁盘存储器
+  + 由磁盘片，磁盘驱动器和磁盘控制器组成。
+  + 理清楚的概念：存储密度，存储容量和访问时间。
+    + 存储密度分为道密度和位密度。
+    + 存储容量分为格式化容量和非格式化容量。
+    + 访问时间分为寻道时间，旋转时间和传送时间。磁头定位该磁道称为寻道时间。旋转时间为扇区旋转到磁头的时间，传送时间为扇区从磁头上经过的时间。
+
+#### 程序查询方式
+
++ 适合低速，cpu/IO是串行的工作模式。对cpu占用的程度比较大
+
+#### 中断控制方式
+
++ 有利于提高cpu的利用率
++ 中断分为单级中断和多级中断。cpu一次只可以处理一个中断请求，如果存在多个中断请求同时发生。
+
+
+
+
+
+
+
+
 
