--- a/计算机网络.md
+++ b/计算机网络.md
@@ -25,6 +25,12 @@
 + 报文交换
 
   报文交换类似于分组交换，但是不如分组交换那样速度快。将报文先传送到相邻的结点，然后进行存储查找转发表，转发到下一个结点
+  
++ | 数据交换方式 | 优缺点                                                       |
+  | ------------ | ------------------------------------------------------------ |
+  | 电路交换     | 端对端的通信因为约定了通信质量而使得通信质量得到了保障，对于传输大量数据效率高。 |
+  | 报文交换     | 无需预约传输带宽，动态逐段利用传输带宽，对于突发式的数据通信效率高。 |
+  | 分组交换     | 报文交换高效，迅速。同时分组小，灵活。网络生存性能好。       |
 
 ### 计算机网络的性能指标
 
@@ -66,13 +72,127 @@
 
 + 应用层，传输层，网际层，网络接口层。
 
-#### 或5层参考模型
+#### 5层参考模型
 
 + 应用层，传输层，网络层，数据链路层，物理层。
 
+## 物理层
+
+### 信道
+
++ 关于信道的几个概念
+  + 单工通信，只能有一个方向发送信息，有限广播以及电视广播 。只需要一条信道
+  + 半双工通信，可以由两个方向发送信息，但是两个方向不能同时发送信息。需要两条信道
+  + 全双工通信，可以由两个方向发送信息，并且两个方向可以同时发送信息。需要两条信道
++ 传输方式： 串行传输和并行传输
++ 码元是一个固定长度的信号波形
++ 频率过高可能会导致失真现象，原因就是码间串扰，出现这种现象的原因是由于频率过高，导致接收端无法分辨出不同的波形之间的差异。
++ 奈氏准则：数据传输率v=2Wlog2V，W是信号的频率，V是一个码元所携带的比特数
++ 香农定理
+  + 信噪比=信号的平均功率/噪声的平均功率。S/N，单位是分贝。
+  + 信噪比=10log10(S/N)(dB),根据这个公式，我们可以求出S/N
+  + 信道的极限传输速率C=Wlog2(1+S/N)
++ 基带信号：直接传输了我们需要传输的信号
++ 宽带信号：将我们需要传输的信号先进行载波调制，然后就可以放到特定的频段上面进行传输。
+
+### 信道复用技术
+
++ 最基本的复用技术
+  + 频分服用，是指用于在通信过程中始终占用这个频段。
+  + 时分复用，将时间划分为一段段登长的时分复用帧，每一个时分复用的用户所占的时间间隙是周期性的。
+
++ 频分复用
++ 波分复用，利用光纤技术是得数据的传输速率空前提高。
++ 码分复用，码分复用技术各用户使用经过特殊挑选的不同码型，因此各用户直接不会造成干扰。
+
+## 数据链路层
+
+### 使用的通信方式
+
++ 点对点通信，使用一对一进行通信。
++ 广播通信，使用一对多的广播通信方式，过程比较复杂。
+
+###  点对点通信
+
++ 封装成帧,在一段数据的前后分别添加首部和尾部，这样就构成了一个帧。
+
+  + 帧是数据链路层的一个数据传送单元，一个帧的帧长等于帧的数据部分长度加上帧的首部和尾部。
+
+  + 帧定界符规定了帧的开始位置和结束位置，在数据进行传输的时候，可以根据首部和尾部位置判断数据是否丢失。
+
++ 透明传输，当我们传输的是文本的时候，可以放心的进行传输，不会造成误会，不管我们输入的是什么字符，都可以放到帧里面进行传输，这样的传输就是透明传输。
+
+  + 但是，假如我们遇到的是非文本文件的时候，就可能会存在与帧定界相冲突的字符，这个时候就需要我们进行字符填充，这个填充就相当与我们的转义字符，这样就可以避免冲突了。在接收端的时候去掉相应的字节。
+  + 解决的方法：字节填充法，字符填充法和零比特填充法。
+
++ 差错检测，在数据进行传输的时候，数据可能造成差错。所以需要我们对传输的数据进行检查或者进行纠正错误。
+
+  + 奇偶校验码
+  + 循环冗余码
+  + 海明码（发现双比特错误，纠正单比特错误)
+
+### 使用广播信道的数据链路层
+
++ 广播信道采用的是共享信道的方法进行数据的传输。在技术上分为静态划分信道和动态媒体接入控制。
+  + 静态接入：将某条信道单独分配给某一个用户使用。
+  + 动态媒体接入控制：多点接入，分为随机接入和受控接入。
+    + 随机接入
+    + 受控接入。令牌，探询
++ 以太网是一种基带总线局域网。
++ 适配器，硬件地址放到ROM里面，IP地址放到存储器里面。
++ CSA/CD协议
+  + 这个协议是用来进行数据的发送，这是不可靠的交付。
+  + 多点接入，载波监听，碰撞检测。
++ MAC地址作为物理地址，是一台计算机的唯一标识。相当与我们每个人的身份证。
+
+### 扩展以太网
+
++ 首先，这依然是一个网络。
++ 在物理地址上面拓展以太网。使用多个集线器进行拓展。
++ 在数据链路层扩展以太网。使用网桥，通过建立地址表进行查找。后面通常采用的是交换机。以太网交换机上面有很多个接口，相互通信的主机都是独占传输媒体，无碰撞地传输数据。
++ 以太网交换机具有自学功能。
+
 ## 网络层
 
-### 互联网的路由选择协议
++ 本章最主要的一个协议是IP协议
++ 网络层提供的数据不是可靠的，这是一种不可靠的传输。
+
+#### 网际协议IP
+
++ 包括三种协议，地址解析协议，网际控制报文协议，网际管理协议。
+
++ 这一层的主要作用是利用网际协议ip将许多计算机网络互联起来。
+
++ 将网络连接起来需要一些中间的设备，主要是转发器，网桥和路由器和网关。
+
+  + 网桥：物理层使用的中间设备
+  + 网桥：数据链路层使用的中间设备
+  + 路由器：网络层使用的中间设备
+  + 网关：网络层以上使用的中间设备
+
++ 互联网直接的网络使用异构组成的
+
++ 分类的IP地址
+
+  + 根据ip地址的分类，可以将ip地址分为A类，B类，C类，D类和E类。
+  + 对于每个地址，一共有四个字节组成
+
+  | 地址类型 | 二进制区分 | 网络号   | 主机号   |
+  | -------- | ---------- | -------- | -------- |
+  | A类      | 0开头      | 一个字节 | 三个字节 |
+  | B类      | 10开头     | 两个字节 | 两个字节 |
+  | C类      | 110开头    | 三个字节 | 一个字节 |
+  | D类      | 1110开头   | 多播地址 |          |
+  | E类      | 1111 开头  | 待分配   |          |
+
++ 在平常生活中，我们一般使用的是点分十进制法进行表示。
+
++ 我们重点介绍的是ABC三类地址
+  + A类地址：这类地址的网络号占用一个字节，最前面以0开头，所以一共有7位可以被使用，首先，全0是一个保留地址，表示这个网络本身。另外，01111111保留作为本地软件环回测试用来本主机和进程之间的通信使用。整个IP地址的空间共有2^32个地址，但是A类地址减去最开始的那个0之后就还有2^31种地址，所以A类地址占整个IP地址的50%。
+  + B类地址：这类地址最前面的网络号有固定是0和1，这样的话我们还有30位可以进行划分。占用整个地址空间的25%
+  + C类地址：这类地址最前面固定是110，我们还有21位网络号可以进行划分，占用整个地址的12.5%
++ 我们可以发现，在同一个网段的各个主机之间的ip的网络号必须是一样的。
++ IP地址是一台计算机的逻辑地址，用于网络层及之上的;物理地址是在物理层和数据链路层使用的。
 
 #### 内部网关协议RIP
 
