--- a/编译原理.md
+++ b/编译原理.md
@@ -16,3 +16,21 @@
 + 编译器的结构
   + 词法分析
     + 词法分析器读入组成源程序的字节流，然后将他们组成一个有意义的词素的序列。
+  + 语法分析
+    + 语法分析器是将词法分析器的各个词法单元用来创建树形的中间表示。该中间表示给出了词法产生的单元流的语法结构。从而形成了了一棵语法树。
+  + 语义分析
+    + 使用语法树和符号表中的信息来检查源程序是否和语言定义的语义一致。在这个部分做的有类型检查。
+  + 中间代码生成
+    + 中间代码生成应该具有两个重要的性质，一个是易于生成，另一个是能轻松翻译目标机器上面的语言。
+  + 代码优化
+    + 这一部分就是改进优化中间代码，生成更好的目标代码。
+  + 代码生成
+    + 我们得到源程序的中间表示形式作为输入，然后映射到目标语言，对于目标语言是机器语言的代码，需要为程序的每个变量合理地分配内存位置，然后，中间指令被翻译成了机器指令序列。
+  + 符号表管理
+    + 符号表记录了源程序总使用的变量的名字，以及这些名字的各种属性的有关信息。这种数据结构可以使得编译器迅速查找到每个名字的记录。
+  + 我们首先知道的是利用
+
+
+
+
+
