--- a/面试/计算机网络.md
+++ b/面试/计算机网络.md
@@ -18,9 +18,12 @@
   ![img](https://cdn.nlark.com/yuque/0/2021/png/2752815/1637493992028-6ec9e9cf-07c8-4720-aeb7-c02a4bed23a3.png)
 
   - **三次握手**
-- - 第一次握手，客户端发送网络包，服务端收到了，这样服务端就得出结论，客户端的发送能力和服务端的接收能力都是正常的。
+  
+    - 第一次握手，客户端发送网络包，服务端收到了，这样服务端就得出结论，客户端的发送能力和服务端的接收能力都是正常的。
+  
     - 第二次握手，服务端发送包，客户端收到了，这样客户端就可以得到结论，服务端和客户端的发送能力和客户端的接收能力都是正常的。这样客户端就知道了自己的发送能力和接受能力都是正常的。**所以第二次握手的时候客户端就可以确定服务端和客户端是否可以正常通信。**
-  - - 第三次握手，客户端发送数据包，服务端收到了。在第一二次握手的阶段，**服务端不知道客户端的接收能力和自己的发送能力是否正常**。但是在第三次握手的时候，服务端收到了客户端对自己的第二次握手的回应。从服务端的角度，我在第二次握手时的响应数据发送出去了，客户端接受到了，所以，我的发送能力是正常的，客户端的接受能力是正常的。
+    - 第三次握手，客户端发送数据包，服务端收到了。在第一二次握手的阶段，**服务端不知道客户端的接收能力和自己的发送能力是否正常**。但是在第三次握手的时候，服务端收到了客户端对自己的第二次握手的回应。从服务端的角度，我在第二次握手时的响应数据发送出去了，客户端接受到了，所以，我的发送能力是正常的，客户端的接受能力是正常的。
+  
   - 通过了以上三次握手，客户端和服务端就都知道了对方和自己的发送能力和接受能力都是正常的。接下来就是正常的通信了。
   - **更加专业化的语言描述三次握手**
   - - 客户端发送一个SYN段，并指明客户端的初始序列号，即ISN(c)
@@ -51,7 +54,6 @@
     + 第一次请求，客户端发送一个HTTP GET请求，服务器处理请求，返回文件的内容以及相关的header，其中包括Etag
     + 第二次请求（断点续传），客户端发送一个http GET请求，同时发送If-Range
     + 服务端判断收到的Etag和计算Etag是否匹配。
-
 + HTTP 状态码
 
   + 1xx，指信息，表示请求已经接受，继续处理
@@ -59,7 +61,6 @@
     + 200,OK,请求正常理解
     + 204,请求处理成功，但是没有资源返回
     + 206,对资源的某一部分的请求
-
   + 3xx，重定向，完成请求必须进行更近一步的操作
     + 301,永久重定向，请求的资源已经被永久迁移到新的url里面，今后任何新的请求都通过这个新的url进行访问。
     + 302,临时重定向，资源只是临时被移动，客户端可以继续请求原有的url
@@ -69,10 +70,13 @@
     + 401,请求未经过授权，需要有同感http认证的认证信息
     + 403,服务器收到请求，但是拒绝提供服务
     + 404,无法找到请求资源
-
   + 5xx，服务端错误，服务端未能实现合法的请求
     + 500, 服务器执行的时候发生错误
     + 503,服务器处于超负荷或者正在停机维护
++ http和https的区别
+  + http以明文的方式发送数据。不提供任何的数据加密。容易被网站的攻击者截获数据。
+  + https超文本安全传输协议。同样是使用http进行通信，但是将数据包通过TLS/SSL进行加密。是提供对网站服务器的身份认证，保护交换数据的隐私与完整性的一种协议。
 
 
-  
+
+
