--- a/编译原理.md
+++ b/编译原理.md
@@ -4,6 +4,7 @@
   + 编译器就是将某一种语言翻译成另一种语言。
   + 解释器是直接利用用户提供的输入执行源程序中指定的操作。
   + 编译型的语言的执行的速度要快于解释型的语言，但是解释型的语言的错误诊断效果比编译型的语言更好。
+  
 + 编译的过程中的一些处理器（这些都不是实际的物理机器，而是一些程序）
   + 预处理器
     + 预处理器先将程序分割成多个模块，并存放于独立的文件中，把源程序聚合在一起的任务有这个完成。同时还负责将宏转换成源语言的语句。
@@ -13,6 +14,7 @@
     + 大型程序通过被分为多个部分进行编译。可以重新定位的机器代码有必要和其他可重定位的目标文件以及库文件连接到一起，但是一个文件中的带按摩可能执行另一个文件中的位置，这个时候就需要使用链接解决外部内存地址的问题。
   + 加载器
     + 把所有的可执行目标文件放到内存中执行。
+  
 + 编译器的结构
   + 词法分析
     + 词法分析器读入组成源程序的字节流，然后将他们组成一个有意义的词素的序列。
@@ -28,7 +30,32 @@
     + 我们得到源程序的中间表示形式作为输入，然后映射到目标语言，对于目标语言是机器语言的代码，需要为程序的每个变量合理地分配内存位置，然后，中间指令被翻译成了机器指令序列。
   + 符号表管理
     + 符号表记录了源程序总使用的变量的名字，以及这些名字的各种属性的有关信息。这种数据结构可以使得编译器迅速查找到每个名字的记录。
-  + 我们首先知道的是利用
+  + 上下文无关法
+    + 一共包含四个部分：开始符号，终结符号，非终结符号和产生式
+    + 最左推导和最右推导的区别就是替换的顺序不同。
+  
+  ## 语法分析
+  
+  + 文法定义
+    + 一个上下文无关文法由四个元素组成，一个终结符号集合，一个非终结符号集合，一个产生式集合，指定一个非终结符号的开始字符。
+  + 语法分析的任务是接受一个终结符号串作为输入，找出文法的开始字符推导出这个串的方法。如果我们不能从文法的开始字符推导到该终结字符，则报告该符号串文法包含语法错误。
+  + 语法分析树
+    + 根节点的标号为文法的开始字符。
+    + 每个叶子结点的标号为一个终结字符。
+    + 每个内部结点的标号为一个非终结符号。
+    + 如果非终结符号A是某一个内部结点的标号，并且它的子节点的标号是从左到右分别为$X_1,X_2,X_3...X_n$,那么它的子节点既可以是终结结点，也可以是非终结结点，那么这个是一中特殊的情况。
+  + 二义性
+    + 一个文法可能存在多棵语法分析树，能够生成同一个给定的终结字符串。这样的文法具有二义性。如果想要证明一个文法具有二义性，我们只需要找到一个终结符号串，说明它是两颗以上的语法分析树的结果。
+  
+  ## 词法分析
+  
+  + 词法分析器的功能就是输入源程序，输出单词符号。单词符号分为五种：关键字，标识符，常数，运算符和界符。
+
+
+
+
+
+
 
 
 
