--- a/计算机网络.md
+++ b/计算机网络.md
@@ -107,6 +107,8 @@
 
 ## 数据链路层
 
++ 数据链路层主要是从物理层的数据传递到我们的网络层，在这个过程中我们需要做的是防止数据的丢失和重复，确保我们数据交付的准确性。
+
 ### 使用的通信方式
 
 + 点对点通信，使用一对一进行通信。
@@ -130,6 +132,11 @@
   + 奇偶校验码
   + 循环冗余码
   + 海明码（发现双比特错误，纠正单比特错误)
+
+### CSMA协议
+
++ 坚持$CSMA$，非坚持$CSMA$，p-坚持$CSMA$协议。这类似于是一种总线型，共享同一个信道，对信道进行监听，当信道为空闲的时候才可以使用这个。
++ 
 
 ### 使用广播信道的数据链路层
 
