--- a/面试/计算机网络.md
+++ b/面试/计算机网络.md
@@ -38,6 +38,9 @@
     - 客户端发送确认，ACK=L+1
 - **为什么建立连接是三次握手，断开连接确是四次挥手？**
   - - 这是因为服务端在LISTEN状态下，收到建立连接请求的SYN报文段后，**把ACK和SYN放到一个报文里面发送给客户端**;关闭连接时，当收到对方的FIN报文段的时候，仅仅表示对方不再发送数据了，但是对方还是可以接收数据，己方是否现在关闭数据通道，需要由上层决定。因此，**己方的ACK和FIN通常是分开的。**
+- 在四次挥手中，为什么客户端进入TIME_WAIT之后需要等待2&MSL时间，而不是直接进入CLOSE状态？
+  - 客户端在给服务端回执的时候，可能服务端没有收到，那么需要再次向客户端发送FIN=1的断开请求报文。此时，如果客户端立马关闭，那么服务端就会因为没有收到报文而无法进入CLOSE状态。
+  - 等待一段时间是为了让进入本次连接的所有报文段的信息都消失，不会对下次的连接的报文段产生影响。
 
 + HTTP断点续传
 
@@ -76,7 +79,6 @@
 + http和https的区别
   + http以明文的方式发送数据。不提供任何的数据加密。容易被网站的攻击者截获数据。
   + https超文本安全传输协议。同样是使用http进行通信，但是将数据包通过TLS/SSL进行加密。是提供对网站服务器的身份认证，保护交换数据的隐私与完整性的一种协议。
-
 
 
 
