--- a/面试/计算机网络.md
+++ b/面试/计算机网络.md
@@ -41,6 +41,13 @@
 - 在四次挥手中，为什么客户端进入TIME_WAIT之后需要等待2&MSL时间，而不是直接进入CLOSE状态？
   - 客户端在给服务端回执的时候，可能服务端没有收到，那么需要再次向客户端发送FIN=1的断开请求报文。此时，如果客户端立马关闭，那么服务端就会因为没有收到报文而无法进入CLOSE状态。
   - 等待一段时间是为了让进入本次连接的所有报文段的信息都消失，不会对下次的连接的报文段产生影响。
+- ARQ协议
+  - ARQ协议是自动重传请求，如果发送方在一定的时间内没有收到回执，那么就会重新向接收端发送数据报文。
+  - 停止等待ARQ协议
+    - 发送端在发送的过程中，会先停止等待收到接收端发送过来的回执，如果没有收到，发送端会重新发送之前的报文分组。发送端会维护一个计时器，这个超时的时间一般会比传输的时间长。
+  - 连续的ARQ协议
+    - 停止等待ARQ协议对信道的占用不是连续的，而且由于需要等待接收端返回确认回执，所以对信道的资源利用率比较低。
+    - 连续的ARQ协议是维护一个窗口，这个窗口有很多个分组，窗口的大小就是分组的个数，凡是窗口内的分组都可以直接发送出去而没有必要等待收到接收端的确认回执。对于按序列到达的最后一个分组，接收端会发送一个确认回执，如果发送端没有收到这个回执，那么这个分组后面的就会重新发送给接收端。这个一般在发送端都会有数据缓存，如果需要重新发送，那么就会取用缓存里面的重新发送。
 
 + HTTP断点续传
 
@@ -79,6 +86,18 @@
 + http和https的区别
   + http以明文的方式发送数据。不提供任何的数据加密。容易被网站的攻击者截获数据。
   + https超文本安全传输协议。同样是使用http进行通信，但是将数据包通过TLS/SSL进行加密。是提供对网站服务器的身份认证，保护交换数据的隐私与完整性的一种协议。
+
++ TCP的流量控制
+  + 流量控制的具体操作是接收端会通知发送端自己能接受的数据大小，于是发送端根据这个大小来调整自己发送的数据量。窗口越大吞吐量越高。
+  + TCP的拥塞控制，TCP的拥塞控制的策略为慢启动，拥塞避免，快重传和快恢复。
+  + TCP的粘包问题。TCP的粘包指的是发送端不断向接受端发送数据报文，两个数据包粘在一起的情况，一个数据包包括两个数据包的数据，这种问题被称为粘包问题。粘包的原因是TCP把数据看作是一连串的字节流，TCP的发送的数据小于TCP发送缓冲区的大小。
+    + 发送端粘包，TCP将多次写入缓冲区的数据一次性发送，这种情况就有可能造成粘包问题。
+    + 接收端粘包，接收端接收到数据之后，传输层的TCP协议会将接受的数据放到一个缓冲区里面，这个时候如果上层的应用层没有及时地从缓冲区里面取走数据，那么会出现取用数据报文的时候去用到两个数据报文的情况。
+    + 总是就是接收端没有及时地取走缓冲区里面的数据，就会造成粘包问题。
+  + 如何避免粘包问题？
+    + 在每个包后面添加一个特殊的字符，用来区分不同的包。
+    + 在报文首部添加一个包的长度。
+  + 
 
 
 
