--- a/面试/计算机网络.md
+++ b/面试/计算机网络.md
@@ -86,7 +86,6 @@
 + http和https的区别
   + http以明文的方式发送数据。不提供任何的数据加密。容易被网站的攻击者截获数据。
   + https超文本安全传输协议。同样是使用http进行通信，但是将数据包通过TLS/SSL进行加密。是提供对网站服务器的身份认证，保护交换数据的隐私与完整性的一种协议。
-
 + TCP的流量控制
   + 流量控制的具体操作是接收端会通知发送端自己能接受的数据大小，于是发送端根据这个大小来调整自己发送的数据量。窗口越大吞吐量越高。
   + TCP的拥塞控制，TCP的拥塞控制的策略为慢启动，拥塞避免，快重传和快恢复。
@@ -97,7 +96,23 @@
   + 如何避免粘包问题？
     + 在每个包后面添加一个特殊的字符，用来区分不同的包。
     + 在报文首部添加一个包的长度。
-  + 
++ 在浏览器输入一个url的执行过程
+  + url解析。浏览器解析这个url，这个过程会检查缓存，如果有缓存，那么直接返回缓存的内容即可。首先，判断浏览器本地是否有缓存，先判断是否过期，如果有过期，那么重新向服务端申请，如果服务端没有更改资源，那么继续使用本地缓存，否则，重新返回资源并且缓存。如果没有缓存，那么向服务端进行申请并且缓存到本地浏览器即可。
+  + DNS查询。查询的顺序依次是浏览器缓存->操作系统查询->路由器查询->ISP DNS查询->根域名DNS查询
+  + TCP连接。应用层，传输层，网络层，链路层。
+  + 服务器接受请求。
+  + 浏览器接收数据。
+  + 渲染界面。
++ GET请求和POST请求的区别
+  + GET请求一般是获取数据，POST请求一般是用来提交数据。
+  + GET请求的数据会把数据队列添加到通过提交的ACTION属性所指向的URL中，值和表单的内容一一对应。是可见的。POST请求将数据内容放到HTML header内传动到ACTION属性所只想的URL里面，是不可见的。
+  + GET请求服务端一般是通过Request.QueryString方法获取参数，POST请求通过Request.Form方法获取参数
+  + GET请求传输的数据量比较小，一般只有2kb，但是效率比较高。POST请求传输的数据量比较大，一般没有限制，传输大文件的时候只能用POST请求。
++ websocket的实现原理
+  + 首先，我们需要知道为什么需要有websocket，因为http的连接是一个不能持久通信的数据传输协议，每次需要发送和接受数据的时候，就进行一个tcp连接。数据发送完成之后就会断开，对于我们即时通讯软件来说，显然是很低效的。
+  + 所以，为了需要有持久通信的能力，websocket协议应运而生。
+  + websocket是一种全双工通信。
+  + websocket协议通过http协议来建立运输层之间的tcp连接，然后后续便和http没有关系了。
 
-
++ websocket协议的优点，消耗的资源很小，服务端和客户端都可以发送数据。缺点是少部分浏览器支持，各种浏览器支持的程度不同
 
