--- a/面试/操作系统.md
+++ b/面试/操作系统.md
@@ -27,3 +27,6 @@
 
   + 协程之间一般是通过共享变量的方法来进行通信的，但是这样会给共享内存的多线程造成困难。
   + 在Go语言中，一般是通过channel进行通信的，这种通道方式保证了数据的同步性，同一个时间内只有一个线程可以访问数据，不会出现数据的竞争的现象。
+
++ 交换空间
+  + 当我们的内存不足的时候，我们会将内存中一部分不用的数据放进磁盘空间里面，让出宝贵的内存给需要用的进程。当再次需要这部分的时候再次从磁盘空间里面转到内存中，磁盘空间的那块区间就是我们的交换空间，虚拟内存的空间就是我们的内存空间和磁盘空间的总的空间的大小。
