--- a/面试/计算机网络.md
+++ b/面试/计算机网络.md
@@ -113,6 +113,16 @@
   + 所以，为了需要有持久通信的能力，websocket协议应运而生。
   + websocket是一种全双工通信。
   + websocket协议通过http协议来建立运输层之间的tcp连接，然后后续便和http没有关系了。
-
 + websocket协议的优点，消耗的资源很小，服务端和客户端都可以发送数据。缺点是少部分浏览器支持，各种浏览器支持的程度不同
++ session和cookie和token的区别
+  + session是在一开始的时候为了区分不同的请求用户实现的。在客户端和服务端一开始建立请求的时候，服务端会给大家发送一个会话标识，也就是一个字符串。每个客户端收到之后，就会在之后的发送请求的时候将这个sessionid携带给服务端。这样，服务端就可以进行表示不同的用户了。服务端把session存储的压力比较大。在客户端是采用cookie的方式来保存这个sessionid的。但是如果做了负载均衡，请求被转发到另一台服务器就会出现sessionid失效的情况。
+  + cookie是在服务端生成的，然后发送给客户端，客户端在本地保存这些cookie，在下一次请求的时候将这个cookie发送给服务端。但是cookie容易被别人伪造。而且由于内容过大，会给网络造成压力。
+  + token就是服务端给客户端发送一个token令牌，然后客户端在浏览器本地保存这个token，在之后的请求中，客户端都会携带这个token给服务端进行身份验证。为了防止有人伪造令牌，服务端会对token进行加密，同时添加签名和密钥。token是无状态的。为什么选择token？token是无状态，可扩展，可以支持移动设备，同时可以跨程序调用，可以进行加密，安全。有利于分布式部署。
++ TCP的拥塞控制
+  + 拥塞控制分为四个步骤，分别是慢启动，拥塞避免，快重传，快恢复。
+  + 慢启动，我们设置一个拥塞窗口，如果立刻把大量的数据字节注入信道里面，很有可能会造成网络拥堵。那么我们就慢慢增大这个拥塞窗口。在每次收到一个对新的报文的确认之后，我们将窗口增大一些。
+  + 拥塞避免。当我们进行慢启动的时候，但是拥有塞窗口增长过大也可能导致网络拥堵，所以我们需要设置一个慢开始门限。如果我们的拥塞窗口小于这个门限，那么我们可以使用慢启动算法。否则我们可以使用拥塞避免算法。拥塞避免算法就是将我们的拥塞窗口缓慢增大，在收到一次确认的报文段之后，我们只要将这个窗口缓慢增大。
+  + 快重传，当我们的数据丢失之后，我们需要让发送方尽早知道发生了个别报文的丢失。这样就要求发送方不要等待自己发送数据的时候顺带确认，而是直接发送确认。如果发送方连收到了三个确认，那么说明这个报文段需要重传。
+  + 快恢复。就是发送方知道了只是丢失了几个报文段。于是不启动慢开始，而是执行快恢复算法。设置好门限和拥塞窗口。并开始执行拥啬避免算法。
+
 
