--- a/面试/计算机网络.md
+++ b/面试/计算机网络.md
@@ -30,11 +30,11 @@
   - 服务端发送自己的SYN段作为应答，同时指明自己的ISN(s).为了确认客户端的SYN，将ISN(c)+1作为ACK的值，这样，每次发送一个SYN，序列号就会加1,如果有丢失的情况，就会重传。
   - - 为了确认服务器的SYN，客户端需要将SYN(s)+1作为返回的ACK的值
 - **四次挥手**
-  - - 当客户端和服务端的一方想要关闭连接的时候，会发送指令告知对方（一次），我要关闭连接了。这个时候对方会返回一个ACK，表示同意你这个方向的连接（两次）。**然后此时一个方向的连接已经关闭了**。但是可能对方正在传输数据，所以需要等到所有的数据都传输完毕之后，对方发送一个FIN来关闭此方向的连接（三次），接受方接收到后发送一个ACK来确认关闭连接（四次）。
+  - 当客户端和服务端的一方想要关闭连接的时候，会发送指令告知对方（一次），我要关闭连接了。这个时候对方会返回一个ACK，表示同意你这个方向的连接（两次）。**然后此时一个方向的连接已经关闭了**。但是可能对方正在传输数据，所以需要等到所有的数据都传输完毕之后，对方发送一个FIN来关闭此方向的连接（三次），接受方接收到后发送一个ACK来确认关闭连接（四次）。
   - **更加专业化的语言描述四次挥手**
-- - 客户端发送一个FIN段，并包含一个希望接收者看到的自己当前的序列号K，同时还包含一个ACK表示确认对方最近一次发过来的数据
+    - 户端发送一个FIN段，并包含一个希望接收者看到的自己当前的序列号K，同时还包含一个ACK表示确认对方最近一次发过来的数据
     - 服务端将K值加1作为ACK序列值，表明收到一个包，这时上层的程序将会被告知另一端发起了关闭操作。
-- - 服务端发送一个FIN段，ACK=K+1，Seq=L
+    - 服务端发送一个FIN段，ACK=K+1，Seq=L
     - 客户端发送确认，ACK=L+1
 - **为什么建立连接是三次握手，断开连接确是四次挥手？**
   - - 这是因为服务端在LISTEN状态下，收到建立连接请求的SYN报文段后，**把ACK和SYN放到一个报文里面发送给客户端**;关闭连接时，当收到对方的FIN报文段的时候，仅仅表示对方不再发送数据了，但是对方还是可以接收数据，己方是否现在关闭数据通道，需要由上层决定。因此，**己方的ACK和FIN通常是分开的。**
