--- a/编译原理.md
+++ b/编译原理.md
@@ -95,7 +95,9 @@
 ### 编译原理第五章
 
 + 进行移进-归约操作。
+
 + 一个句型的最左直接短语称为该句型的句柄。
+
 + 如何判断直接短语，最左素短语？
   + 我们根据给定的文法，给这个句型构造出一棵树。
   + 根据这棵树，当子树不包含其他更小的子树的时候，该子树叶子结点所组成的字符串就是该句型的直接短语。
@@ -104,6 +106,7 @@
 + 如何求$FirstVT$集合
   + $对于每个给定的文法，我们需要找P->a...或者是P->Qa...这种形式的，如果满足这种形势的，我们就把a加入到FirstVT(P)里面$
   + $对于给定的文法，如果存在P->Q...,那么就把FirstVT(Q)里面的元素都加入到FirstVT(P)里面去$
+  
 + 如何求$LastVT$集合
   + $对于给定的文法，我们需要找到P->...Q或者是P->...aQ这种形式的，如果满足这种形式的，那么我们就把a加入到LastVT(P)里面$
   + $对于给定的文法，如果存在P->...Q,那么就把LastVT(Q)的元素都加入到LastVT(P)里面$
@@ -115,4 +118,64 @@
   + $如果有aQ这种形式的，那么对于First VT(Q)里面的每个元素x，都有a<x$
   + $如果有Qa这种形式的，那么对于LastVT(Q)里面的每个元素x，都有x>a$
 
-+ 
++ 如何根据文法构造出活前缀
+
+  + 首先，我们先要给出构造出所有文法的项目，就是在符号的左右边加上点。这里我们需要新增一个没有出现的字符，将文法G(S)拓广为G'(S')。S’作为G‘的开始符号。同时，我们需要对每个文法进行编号处理，这是为了后续方便构造出ACTION表的归约部分。
+  + 然后，我们做出如下规定
+    + $点在最右边的称为归约项目，A->\alpha. 特殊的，如果是开始符号的归约项目，我们称为接受项目,如S'->\alpha.。$
+    + $A->\alpha.a\beta，这个a是终结符，这个就叫做移进项目$
+    + $A->\alpha.B\beta,这个B是非终结符，那么就叫做待约项目$
+  + 构造识别文法所有活前缀的$NFA$
+    + $如果状态i为X->{A_1}{A_2}..{A_{i-1}}.{A_{i}}{A_{i+1}}...A_n,同时j状态有X->{A_i}{A_2}...{A_{i}}.{A_{i+1}}...A_n,那么就从状态i连接1条标记为X_i的有向边到状态j$
+    + $如果状态i为X->\alpha.A\beta,A是非终结符，那么就连接一条边为\epsilon到所有的状态A->.\gamma$
+
+  + 构造活前缀的$DFA$
+
+    + $如果状态i为X->\alpha.A\beta,A是非终结符，那么就把\epsilon到所有的状态A->.\gamma的这些状态合并成一个项目集$
+
+    + $$
+      合并完之后，对于项目及里面的每个项目，我们需要按照如果状态i为X->{A_1}{A_2}..{A_{i-1}}.{A_{i}}{A_{i+1}}...A_n \\同时j状态有X->{A_i}{A_2}...{A_{i}}.{A_{i+1}}...A_n,那么就从状态i连接1条标记为X_i的有向边到状态j
+      $$
+
++ 如何构造ACTION表和GOTO表
+
+  + $这个表格的行就是我们构造出的DFA的状态集的数目，列就是我们的终结符(包括空)和非终结符的数目$
+
+  + $当我们构造出活前缀的DFA的时候，我们需要将根据DFA先完善ACTION表格的移进部分和GOTO表格部分$
+
+  + $$
+    对于归约部分，我们需要处理的是，根据DFA的归约项目，我们根据一开始的编号， \\
+    观察哪个文法可以得到这个DFA里面的状态,比如如果第一个状态E->*A可以得到， \\
+    它的编号是1，那么这一行的状态的所有终结符对应的ACTION部分填上r1
+    $$
+
++ 最后，我们根据ACTION和GOTO表就可以用来判断这个文法是否是一个LR文法
+
++ 如何判断是否有移进-归约冲突。
+  + 某一个产生式的右部是另一个产生式的前缀。
+  + $U->X.aY和V->X.$就存在这种冲突，我们发现对于右边的部分，第二个产生式是第一个产生式的前缀。这样的话我们就不知道此时我们需要执行哪种操作，所以有矛盾。
+  + 冲突产生的条件
+    + 两个产生式出现在自动机中的同一个状态。
+    + $FOLLOW(V)和{a}交集为空$
+
++ 如何判断是否有归约-归约冲突
+  + 不同的产生式有相同的右部或者是产生式的右部是另一个产生式的后缀。
+  + $U->X. 和 V->X. 或者是 U->XY. 和 V->Y.$
+  + 冲突产生的条件
+    + 两个产生式出现在自动机的同一个状态。
+    + $FOLLOW(U)和FOLLOW(V)的交集不是空$
+
++ LR(0)算法的局限性。这种算法不能解决移进-归约和归约-归约冲突。
++ SLR文法不存在归约-归约冲突，有可能存在移进-归约冲突，但是通过使用Follow集合我们可以处理出现的移进-归约冲突。
+
+### 编译原理第六章
++ 综合属性和继承属性。综合属性就是可以自下而上传递信息，继承属性就是用于自上而下传递信息。继承属性一般是出现在产生式的右边，综合属性一般是出现在产生式的左边。
++ 非终结符既可以有继承属性，也可以有综合属性。终结符只有综合属性。
+### 编译原理第七章
++ 中间语言的几种形式
+	+ 后缀式： 把运算量写在前面，把算符写在后面
+	+ 图表示法：也就是一个有向无环图。一个内部结点表示的是一个操作符，它的孩子代表的是操作数。
+	+ 三地址代码：分为四元式和三元式。
+		+ 四元式分为$op,arg1,arg2,result$四个部分
+		+ 三元式分为$op,arg1,arg2$三个部分,间接三元式是通过先构造一个三元式表，然后写出间接码表即可。
+
