--- a/interview/计算机网络.md
+++ b/interview/计算机网络.md
@@ -124,5 +124,11 @@
   + 拥塞避免。当我们进行慢启动的时候，但是拥有塞窗口增长过大也可能导致网络拥堵，所以我们需要设置一个慢开始门限。如果我们的拥塞窗口小于这个门限，那么我们可以使用慢启动算法。否则我们可以使用拥塞避免算法。拥塞避免算法就是将我们的拥塞窗口缓慢增大，在收到一次确认的报文段之后，我们只要将这个窗口缓慢增大。
   + 快重传，当我们的数据丢失之后，我们需要让发送方尽早知道发生了个别报文的丢失。这样就要求发送方不要等待自己发送数据的时候顺带确认，而是直接发送确认。如果发送方连收到了三个确认，那么说明这个报文段需要重传。
   + 快恢复。就是发送方知道了只是丢失了几个报文段。于是不启动慢开始，而是执行快恢复算法。设置好门限和拥塞窗口。并开始执行拥啬避免算法。
++ 为什么需要三次握手？
+  + 对于请求的建立，假如发送端发送了某一个请求，但是网络拥堵没有在规定的时间内到达，那么就会隔很长的时间爱你才能收到服务端发回的确认连接。客户端等待一个超时重传的时间之后会重新请求连接。但是这个滞留的连接请求还是会到达服务器服务端。如果不进行三次握手，那么服务器就会打开两个连接，如果有第三次握手的机会，客户端就会忽略服务端之后发送的对滞留连接请求的连接确认。
+
++ 为什么需要四次挥手？
+  + 客户端收到了释放连接的请求之后，会发送一个一个FIN给服务端，然后进入TIME_WAIT时间段内，有这个时间段是为了让服务端可以发送完没有传达完毕的数据，传达完毕之后，服务端就会发送FIN释放连接。
+  + 注意，在客户端收到服务端发送的FIN报文之后，不是直接进入CLOSE状态，而是需要等待一个时间段，这个时间段就是2MSL，主要的原因是为了让最后一个确认报文能够到达，如果B没有收到A发送来的确认报文的话，那么就会重新发送释放请求连接的报文，A等待了一段时间就是为了处理这种情况。还有就是为了让本次连接的持续时间内的所有的报文从网络里面消失，不要影响之后的TCP连接。
 
 
