--- a/interview/计算机网络.md
+++ b/interview/计算机网络.md
@@ -16,42 +16,40 @@
 ### 运输层
 
 + 运输层主要有两种协议，TCP和UDP，分别是传输控制协议和用户数据协议。
+
 + TCP
   + TCP是面向有连接的，通信的方式是点对点的，提供可靠的交付，全双工通信，传输的是字节流。
+  
 + UDP
-  + UDP是面向报文的，不保证可靠的交付，尽最大努力完成交付。没有拥塞控制，因此不会出现网络拥堵造成的通信质量的下降，多用于实时领域。支持一对一，一对多，多对多的通信。
+  + UDP是面向报文的，不保证可靠的交付，尽最大努力完成交付。没有拥塞控制，因此不会出现网络拥堵造成的通信质量的下降，多用于实时通信领域。支持一对一，一对多，多对多的通信。
 
 + 三次握手和四次挥手
 
   - **什么是TCP**
-
-  - - TCP是一种面向连接的单播协议，在发送数据之前，通信双方需要在彼此之间建立一条连接。所谓的连接，其实就是客户端和服务端的内存里保存的一份关于对方的信息，比如IP地址，端口号等等
+    - TCP是一种面向连接的单播协议，在发送数据之前，通信双方需要在彼此之间建立一条连接。所谓的连接，其实就是客户端和服务端的内存里保存的一份关于对方的信息，比如IP地址，端口号等等
     - TCP可以看作是一种字节流，它会处理IP层或以下的层的丢包，重复和错误问题。在连接的建立过程中，双方需要交换一些连接的参数。这些参数可以放到TCP头部
-
-  - - TCP提供一种可靠，面向连接，字节流，传输层的服务，采用三次握手来建立一个连接，四次挥手来释放一个连接。
+    - TCP提供一种可靠，面向连接，字节流，传输层的服务，采用三次握手来建立一个连接，四次挥手来释放一个连接。
     - 一个TCP连接分为三个阶段，启动，数据传输和退出。
-
+  
   - **TCP头部**
-
-  - - 源端口和目的端口在TCP层确认双方进程，序列号表示的是报文段数据中的第一次字节号，ACK是确认号，该确认号的发送方期待接收的下一个序列号，即最后被成功接收的数据字节序列号加1,只有在ACK位启用的时候才有效。
+    - 源端口和目的端口在TCP层确认双方进程，序列号表示的是报文段数据中的第一次字节号，ACK是确认号，该确认号的发送方期待接收的下一个序列号，即最后被成功接收的数据字节序列号加1,只有在ACK位启用的时候才有效。
     - 几个状态号的含义：ACK-确认，使得确认号有效，RST-重置连接，SYB-用于初始化一个连接的序列号，FIN-该报文段的发送方已经结束向对方发送数据
 
   - **状态转换如下图**
-
+  
   ![img](https://cdn.nlark.com/yuque/0/2021/png/2752815/1637493992028-6ec9e9cf-07c8-4720-aeb7-c02a4bed23a3.png)
-
+  
   - **三次握手**
-
+  
     - 第一次握手，客户端发送网络包，服务端收到了，这样服务端就得出结论，客户端的发送能力和服务端的接收能力都是正常的。
-
+  
     - 第二次握手，服务端发送包，客户端收到了，这样客户端就可以得到结论，服务端和客户端的发送能力和客户端的接收能力都是正常的。这样客户端就知道了自己的发送能力和接受能力都是正常的。**所以第二次握手的时候客户端就可以确定服务端和客户端是否可以正常通信。**
     - 第三次握手，客户端发送数据包，服务端收到了。在第一二次握手的阶段，**服务端不知道客户端的接收能力和自己的发送能力是否正常**。但是在第三次握手的时候，服务端收到了客户端对自己的第二次握手的回应。从服务端的角度，我在第二次握手时的响应数据发送出去了，客户端接受到了，所以，我的发送能力是正常的，客户端的接受能力是正常的。
-
   - 通过了以上三次握手，客户端和服务端就都知道了对方和自己的发送能力和接受能力都是正常的。接下来就是正常的通信了。
   - **更加专业化的语言描述三次握手**
-  - - 客户端发送一个SYN段，并指明客户端的初始序列号，即ISN(c)
-  - 服务端发送自己的SYN段作为应答，同时指明自己的ISN(s).为了确认客户端的SYN，将ISN(c)+1作为ACK的值，这样，每次发送一个SYN，序列号就会加1,如果有丢失的情况，就会重传。
-  - - 为了确认服务器的SYN，客户端需要将SYN(s)+1作为返回的ACK的值
+    - 客户端发送一个SYN段，并指明客户端的初始序列号，即ISN(c)
+    - 服务端发送自己的SYN段作为应答，同时指明自己的ISN(s).为了确认客户端的SYN，将ISN(c)+1作为ACK的值，这样，每次发送一个SYN，序列号就会加1,如果有丢失的情况，就会重传
+    - 为了确认服务器的SYN，客户端需要将SYN(s)+1作为返回的ACK的值
 
 - **四次挥手**
   - 当客户端和服务端的一方想要关闭连接的时候，会发送指令告知对方（一次），我要关闭连接了。这个时候对方会返回一个ACK，表示同意你这个方向的连接（两次）。**然后此时一个方向的连接已经关闭了**。但是可能对方正在传输数据，所以需要等到所有的数据都传输完毕之后，对方发送一个FIN来关闭此方向的连接（三次），接受方接收到后发送一个ACK来确认关闭连接（四次）。
